Fix hr having horizontal scroll bar on mobile

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -49,6 +49,10 @@ md-content {
   hr {
     margin-right: -$spacing-unit;
     margin-left: -$spacing-unit;
+    @include media-query ($on-tablet) {
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
 
   img {
